<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlcoholFood" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/alc_heading"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/consumption_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/food_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/food"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/alcohol_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/caffeine_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caffeine"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/time_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="@string/time_heading"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/void_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/void_time"
        android:singleLine="true"
        android:textColor="#EDDA74"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/item_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="@string/item"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/void_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/void_item"
        android:singleLine="true"
        android:textColor="#EDDA74"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/quantity_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="@string/quantity"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/void_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/void_quantity"
        android:singleLine="true"
        android:textColor="#EDDA74"
        android:textSize="15sp" />

    <Button
        android:id="@+id/consumption_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/consumption_button"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</LinearLayout>