<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9e9e9"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:shadowColor="#FF0000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="#0000CC"
            android:textSize="32sp"
            android:textStyle="bold" />
        
        <!-- Full Name Label -->
        
        <TextView
            android:id="@+id/reg_fullname"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textStyle="bold"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/reg_fill_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/void_fullname"
            android:singleLine="true"
            android:textColor="#EDDA74"
            android:textSize="15sp" />

        <!-- Username Label -->

		<TextView
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/reg_fill_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/new_username"
            android:singleLine="true"
            android:textColor="#EDDA74"
            android:textSize="15sp" />    
                
        <!-- New Password Label -->

		<TextView
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"               
            android:text="@string/password"
            android:textStyle="bold"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/reg_fill_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dp"
            android:hint="@string/void_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#EDDA74"
            android:textSize="15sp" />
        <!-- Register Button -->

		<Button
            android:id="@+id/btnRegister"
            android:onClick="registerCallback"
            android:background="@drawable/round_button"
            android:text="@string/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:paddingRight="50dp"
    		android:paddingLeft="50dp"
    		android:paddingTop="15dp"
    		android:paddingBottom="15dp"
    		android:gravity="center"
    		android:layout_margin="10dp"
    		android:textColor="#ffffff"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:textSize="23sp" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/link_to_login"
            android:text="@string/regtologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</ScrollView>