<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9e9e9"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="@string/choose_option_title"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/phone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/phone"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sensor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/sensor"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/survey_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/survey"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/consumption_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/consumption_btn"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sleep_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="Add Sleep Data"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>