<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e4e4e4"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="View Phone Data"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/call_log"
        android:textColor="#ffffff"
        android:textSize="23sp" />

    <Button
        android:id="@+id/screen_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/screen_status"
        android:textColor="#ffffff"
        android:textSize="23sp" />

    <Button
        android:id="@+id/sms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/sms_data"
        android:textColor="#ffffff"
        android:textSize="23sp" />

</LinearLayout>