<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensor_linear_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/changing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="Data"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sensor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="Choose One to Visualize:"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/sensor_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--
             <RadioButton
            android:id="@+id/acc_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer"
            android:textSize="15sp" />
        -->

        <RadioButton
            android:id="@+id/humid_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/light_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/temperature_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/data_point_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:singleLine="true"
        android:text="Number of Data Points to Record:"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/void_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:hint="Enter A Number."
        android:singleLine="true"
        android:textColor="#EDDA74"
        android:textSize="15sp" />

    <Button
        android:id="@+id/data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Graph Data"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/return_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="Return to Menu"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:visibility="gone" />

</LinearLayout>